* Task/Bug Id: Changes made for alternate coloring and right aligned labels and to show cpr activity status on participant page (Ankush ) * Code Reviewed By: <Reviewed By> On : Mosin Kazi * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD â€“ X
SVN-Revision: 29909

--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -1030,3 +1030,15 @@ input.actionButton{ /* optional style for form and action buttons */
 {
 	background-color: #F5F5F5;
 }
+
+.align_right_style{
+		padding-right: 17px;	
+}
+
+.align_right_style1{
+		padding-right: 10px;	
+}
+
+.align_left_style{
+		padding-left:12px;
+}
